--- a/mockups/joe/mockup1.html
+++ b/mockups/joe/mockup1.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 <!--
@@ -7,8 +8,9 @@
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+<!--
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
+-->
 
 <script type="text/javascript">
 var survey = [];
@@ -64,7 +66,7 @@ $(document).ready(function () {
 </script>
 <style>
 body {padding:0px; margin:0px;}
-div.box {width:50%;float:left; padding:15px 0 15px 0; text-align:center; font-size:30px;
+div.box {width:50%;float:left; padding:10px 0 10px 0; text-align:center; font-size:28px;
             border:1px solid #ddd; background-color: #fff;}
 
 div.box4 {width:25%;}
