--- a/mobileapp/bikeapp/www/login.html
+++ b/mobileapp/bikeapp/www/login.html
@@ -8,9 +8,9 @@
     <link href="assets/css/pageslider.css" rel="stylesheet">
 </head>
 <body>
+<div id="container">
 
-
-<script id="tpl-login" type="text/x-handlebars-template">
+<script id="tpl-login">
     <input id="username" type="text" class="topcoat-text-input--large" value="" placeholder="username">
     <br>
     <input id="password" type="password" class="topcoat-text-input--large" value="" placeholder="password">
@@ -20,42 +20,16 @@
     <span id="err-login" class="error" style="display:none"></span>
 </script>
 
-<script id="tpl-home" type="text/x-handlebars-template">
-    home
-    <br>
-    {{#names}}
-        {{name}}<br>
-    {{/names}}
-</script>
-
-
-<script id="home-tpl" type="text/x-handlebars-template">
-    <div class="topcoat-navigation-bar">
-        <div class="topcoat-navigation-bar__item center full">
-            <h1 class="topcoat-navigation-bar__title">Employee Directory</h1>
-        </div>
-    </div>
-    <div class="search-bar">
-        <input type="search" placeholder="search" class="topcoat-search-input search-key">
-    </div>
-    <div class="topcoat-list__container scroller">
-        <ul class="topcoat-list list employee-list"></ul>
-    </div>
-</script>
-
-
+</div>
 
 <script src="cordova.js"></script>
 <script src="lib/jquery.js"></script>
 <script src="lib/jquery.storage.js"></script>
 <script src="lib/fastclick.js"></script>
-<script src="lib/handlebars.js"></script>
 <script src="lib/pageslider.js"></script>
-<script src="js/adapters/localstorage-adapter.js"></script>
-<script src="js/LoginView.js"></script>
-<script src="js/HomeView.js"></script>
-<script src="js/EmployeeView.js"></script>
-<script src="js/app.js"></script>
+<script src="lib/mustache.js"></script>
+<script src="js/bike.js"></script>
+<script src="js/lib.js"></script>
 
 </body>
 </html>
