Renamed jslib folder, was being ignored named as lib

--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -65,11 +65,11 @@
 </script>
 
 <script src="cordova.js"></script>
-<script src="lib/jquery.js"></script>
-<script src="lib/jquery.storage.js"></script>
-<script src="lib/fastclick.js"></script>
-<script src="lib/pageslider.js"></script>
-<script src="lib/mustache.js"></script>
+<script src="jsliblib/jquery.js"></script>
+<script src="jslib/jquery.storage.js"></script>
+<script src="jslib/fastclick.js"></script>
+<script src="jslib/pageslider.js"></script>
+<script src="jslib/mustache.js"></script>
 <script src="js/lib.js"></script>
 <script src="js/bike.js"></script>
 
