--- a/mobileapp/bikeapp/platforms/ios/www/index.html
+++ b/mobileapp/bikeapp/platforms/ios/www/index.html
@@ -56,16 +56,23 @@
             <div class="topcoat-navigation-bar__item left quarter">
                 <button class="topcoat-button" onclick="window.location.replace('#home')">&laquo;Home</button>
             </div>
-            <div class="topcoat-navigation-bar__item center half">
-
-                <h1 class="topcoat-navigation-bar__title">{{location.name}}</h1>
-            </div>
         </div>
         <div style="margin:10px auto;text-align:center">
-            Start time: {{scheduled_start}}<br>
-            Location type: {{type}}<br>
-            <button onclick="startSession({{id}})" class="topcoat-button">Start Recording</button>
-
+            <h3 class="topcoat-list__header">{{location.name}}</h3>
+            <!--
+            <table>
+                <tr>
+                    <td style="text-align:left">
+                        Start time: {{scheduled_start}}<br>
+                        Location type: {{location.type}}<br>
+                    </td>
+                    <td><button onclick="startSession({{id}})" class="topcoat-button">Start Recording</button></td>
+                </tr>
+            </table>
+            -->
+            <div style="margin:0 auto">
+                <button onclick="startSession({{id}})" class="topcoat-button">Start Recording</button>
+            </div>
             <div style="width:100%;height:300px">
                 <div style="width:100%;height:100%;" id="map"></div>
             </div>
@@ -75,7 +82,7 @@
 
 <script id="tpl-record" type="text/template">
     <div class="topcoat-navigation-bar center">
-        RECORDING
+        Now Recording: <div id="timer"></div>
     </div>
     {{#org.organizationmetrics_set}}
         <div class="heading">{{metric.name}}</div>
