Updated to django 1.7rc1.  Fixed ios to landscrape orientation

--- a/mobileapp/bikeapp/platforms/ios/www/index.html
+++ b/mobileapp/bikeapp/platforms/ios/www/index.html
@@ -97,6 +97,22 @@
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </script>
 
+
+<script id="tpl-done" type="text/template">
+<div>
+    <div class="topcoat-navigation-bar">
+        <div class="topcoat-navigation-bar__item left quarter">
+            <button class="topcoat-button" onclick="window.location.replace('#home')">&laquo;Home</button>
+        </div>
+    </div>
+    <div style="margin:10px auto;text-align:center">
+        <h3 class="topcoat-list__header">Finished!  Thank You</h3>
+        Show some metrics!
+    </div>
+</div>
+</script>
+
+
 <script src="cordova.js"></script>
 <script src="jslib/jquery.js"></script>
 <script src="jslib/jquery.storage.js"></script>
