--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -42,38 +42,40 @@
 
 <script id="tpl-home" type="text/template">
     <div>
-        <div class="topcoat-navigation-bar">
-            <div class="topcoat-navigation-bar__item center full">
-                <h1 class="topcoat-navigation-bar__title">Home</h1>
-            </div>
-        </div>
-        <div class="topcoat-list">
-        {{#appointment_set.length}}
-            <h3 class="topcoat-list__header">{{appointment_set.length}} Appointments</h3>
-        {{/appointment_set.length}}
-        <ul class="topcoat-list__container">
-        {{#appointment_set}}
-            <li class="topcoat-list__item clickable">
-                <a href="#appt/{{id}}">{{location.name}}</a>
-            </li>
-        {{/appointment_set}}
-        {{^appointment_set}}
-            No scheduled sessions
-        {{/appointment_set}}
-        </ul>
-        </div>
+        <h4>Let's Get Started</h4>
+        <a href="#upcoming">Upcoming Appts</a>
+        <br>
+        <a href="#help">Help</a>
+        <br>
+        <a href="#logout">Logout</a>
     </div>
 </script>
 
+
+<script id="tpl-upcoming" type="text/template">
+    <div class="topcoat-list">
+        {{#appointment_set.length}}
+        <h3 class="topcoat-list__header">{{appointment_set.length}} Appointments</h3>
+        {{/appointment_set.length}}
+        <ul class="topcoat-list__container">
+            {{#appointment_set}}
+            <li class="topcoat-list__item clickable">
+                <a href="#appt/{{id}}">{{location.name}}</a>
+            </li>
+            {{/appointment_set}}
+            {{^appointment_set}}
+            No scheduled sessions
+            {{/appointment_set}}
+        </ul>
+    </div>
+</script>
+
+
 <script id="tpl-appt" type="text/template">
-<div>
-        <div class="topcoat-navigation-bar">
-            <div class="topcoat-navigation-bar__item left quarter">
-                <button class="topcoat-button" onclick="window.location.replace('#home')">&laquo;Home</button>
-            </div>
-        </div>
-        <div style="margin:10px auto;text-align:center">
-            <h3 class="topcoat-list__header">{{location.name}}</h3>
+<div class="row">
+    <div class="col-xs-10 offset-xs-1 text-center">
+        <input type="button" class="btn btn-default" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
+        <h3 class="topcoat-list__header">{{location.name}}</h3>
             <!--
             <table>
                 <tr>
@@ -85,52 +87,40 @@
                 </tr>
             </table>
             -->
-            <div style="margin:0 auto">
-                <button onclick="startSession({{id}})" class="topcoat-button">Start Recording</button>
-            </div>
-            <div style="width:100%;height:300px">
-                <div style="width:100%;height:100%;" id="map"></div>
-            </div>
+        <a href="javascript:startSession({{id}})">Start Recording</a>
+        <div style="width:100%;height:300px">
+            <div style="width:100%;height:100%;" id="map"></div>
         </div>
     </div>
+</div>
 </script>
 
 
 <script id="tpl-record" type="text/template">
   <div class="row">
-    <div class="col-xs-5">
-      <div class="heading">Helmet?</div>
-      <div class="metric">
-        <div onclick="boxClick(this)" id="" data-type="" class="box ">
-          Yes
+    <div class="col-xs-4 text-center">
+        <div class="heading">Helmet</div>
+        <div class="btn-group">
+            <button type="button" class="btn btn-default">Yes</button>
+            <button type="button" class="btn btn-default">No</button>
         </div>
-        <div onclick="boxClick(this)" id="" data-type="" class="box ">
-          No
-        </div>
-      </div>
 
-      <div class="heading">Direction</div>
-      <div class="metric">
-        <div onclick="boxClick(this)" id="" data-type="" class="box ">
-          North
-        </div>
-        <div onclick="boxClick(this)" id="" data-type="" class="box ">
-          West
-        </div>
-      </div>
+        <div class="clearfix"></div>
 
-      <div class="heading">Sidewalk?</div>
-      <div class="metric">
-        <div onclick="boxClick(this)" id="" data-type="" class="box ">
-          Yes
+        <div class="heading">Direction</div>
+        <div class="btn-group-vertical">
+            <button type="button" class="btn btn-default">North</button>
+            <button type="button" class="btn btn-default">West</button>
         </div>
-        <div onclick="boxClick(this)" id="" data-type="" class="box ">
-          No
+
+        <div class="heading">SideWalk</div>
+        <div class="btn-group">
+            <button type="button" class="btn btn-default">Yes</button>
+            <button type="button" class="btn btn-default">No</button>
         </div>
-      </div>
     </div>
 
-    <div class="col-xs-2">
+    <div class="col-xs-4 text-center">
       Intersection of Cathy St and 13th St
       <br>
       Total Riders: <span id="total_riders"></span>
@@ -138,7 +128,28 @@
       <input type="button" id="submit_survey" value="Submit" onclick="submitSurvey()">
     </div>
 
-    <div class="col-xs-5">
+    <div class="col-xs-4 text-center">
+        <div class="heading">Gender</div>
+        <div class="btn-group">
+            <button type="button" class="btn btn-default">Male</button>
+            <button type="button" class="btn btn-default">Female</button>
+        </div>
+
+        <div class="clearfix"></div>
+
+        <div class="heading">Direction</div>
+        <div class="btn-group-vertical">
+            <button type="button" class="btn btn-default">East</button>
+            <button type="button" class="btn btn-default">South</button>
+        </div>
+
+        <div class="heading">Wrong Way</div>
+        <div class="btn-group">
+            <button type="button" class="btn btn-default">Yes</button>
+            <button type="button" class="btn btn-default">No</button>
+        </div>
+
+        <!--
       <div class="heading">Gender?</div>
       <div class="metric">
         <div onclick="boxClick(this)" id="" data-type="" class="box ">
@@ -157,6 +168,8 @@
         <div onclick="boxClick(this)" id="" data-type="" class="box ">
           South
         </div>
+
+
       </div>
 
       <div class="heading">Wrong Way?</div>
@@ -168,6 +181,7 @@
           No
         </div>
       </div>
+      -->
     </div>
   </div>
 </script>
